--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/bigquery": "^8.1.1",
+    "@google-cloud/bigquery-data-transfer": "^5.1.2",
     "axios": "^1.13.4",
     "compression": "^1.8.1",
     "cors": "^2.8.6",
